package fr.simulation.weather;
import fr.simulation.aircraft.Coordinates;

public class WeatherTower extends Tower
{
    String  getWeather(Coordinates p_coordinates)
    {
        return "fdgfdg";
    }

    void    changeWeather()
    {

    }
}